--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <main>
 
         <!-- Skip The Diet, Just Eat Healthy With Food Network -->
-         
-        <section class="container">
-            <div class="skip-container ">
-                <div class="skip-left">
-                    <h1> <span class="skip">Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
-                    <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-                    <div><button class="btn-primary">Order Food</button></div>
-                    
 
+        <section class="section-skip-diet">
+            <div class="skip-container  container">
+                <div class="skip-left">
+                    <h1> <span class="skip">Skip</span> The Diet, <br>
+                        Just Eat Healthy <br>
+                        With Food Network</h1>
+                    <p>Imagine you don't need a diet because we provide <br>
+                        healthy and delicious food for you!</p>
+                    <div><button class="btn-primary">Order Food</button></div>
                 </div>
                 <div class="skip-right">
                     <div class="overley-img">
@@ -31,12 +32,11 @@
                     <div class="bg-img">
                         <img src="images/shapes/Group 8450.png" alt="">
                     </div>
-
                 </div>
-
             </div>
-            <p></p>
         </section>
+
+
 
 
 
