About me section responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <!-- Skip The Diet, Just Eat Healthy With Food Network -->
 
-        <section class="section-skip-diet">
+        <section>
             <div class="skip-container  container">
                 <div class="skip-left">
                     <h1> <span class="skip">Skip</span> The Diet, <br>
@@ -23,7 +23,9 @@
                         With Food Network</h1>
                     <p>Imagine you don't need a diet because we provide <br>
                         healthy and delicious food for you!</p>
-                    <div><button class="btn-primary">Order Food</button></div>
+                    <div>
+                        <button class="btn-primary">Order Food</button>
+                    </div>
                 </div>
                 <div class="skip-right">
                     <div class="overley-img">
@@ -36,6 +38,24 @@
             </div>
         </section>
 
+        <!-- About Me Section -->
+
+        <section>
+            <div class=" about-me container">
+                <div class="about-me-left">
+                    <img src="images/female/Person Image.png" alt="">
+                </div>
+                <div class="about-me-right">
+                    <h1>About Me</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a
+                        pharetra, feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi,
+                        risus in suscipit non. Non commodo volutpat, pharetra, vel.</p>
+                    <div>
+                        <button class="btn-primary">Contact Me</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
