My recipies Section responsive

--- a/index.html
+++ b/index.html
@@ -57,7 +57,56 @@
             </div>
         </section>
 
+        <!-- My recipies Section -->
 
+        <section >
+            <div class="recipies container">
+                <div class="recipies-contect">
+                    <h1>My recipies</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <div>
+                            <img src="images/food/Project Cover.jpg" alt="">
+                        </div>
+                        <div class="card-content">
+                        <h3>Card 1</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.</p>
+                            <a href="" class="btn">Read More</a> 
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="images/food/Project Cover.jpg" alt="">
+                        </div>
+                        <div class="card-content">
+                        <h3>Card 2</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.</p>
+                            <a href="" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="images/food/Project Cover.jpg" alt="">
+                        </div>
+                        <div class="card-content">
+                        <h3>Card 3</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.</p>
+                            <a href="" class="btn">Read More</a>
+                        </div>
+                    </div>
+                   
+
+
+                </div>
+
+            <!-- </div> -->
+        </section>
 
 
 
