--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <!-- My recipies Section -->
 
-        <section >
+        <section>
             <div class="recipies container">
                 <div class="recipies-contect">
                     <h1>My recipies</h1>
@@ -72,20 +72,10 @@
                             <img src="images/food/Project Cover.jpg" alt="">
                         </div>
                         <div class="card-content">
-                        <h3>Card 1</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
-                            <a href="" class="btn">Read More</a> 
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div>
-                            <img src="images/food/Project Cover.jpg" alt="">
-                        </div>
-                        <div class="card-content">
-                        <h3>Card 2</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
+                            <h3>Card 1</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been the industry's standard dummy text ever since the 1500s.</p>
                             <a href="" class="btn">Read More</a>
                         </div>
                     </div>
@@ -94,19 +84,45 @@
                             <img src="images/food/Project Cover.jpg" alt="">
                         </div>
                         <div class="card-content">
-                        <h3>Card 3</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
+                            <h3>Card 2</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been the industry's standard dummy text ever since the 1500s.</p>
                             <a href="" class="btn">Read More</a>
                         </div>
                     </div>
-                   
-
-
+                    <div class="card">
+                        <div>
+                            <img src="images/food/Project Cover.jpg" alt="">
+                        </div>
+                        <div class="card-content">
+                            <h3>Card 3</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been the industry's standard dummy text ever since the 1500s.</p>
+                            <a href="" class="btn">Read More</a>
+                        </div>
+                    </div>
                 </div>
-
-            <!-- </div> -->
         </section>
+
+        <!-- Prefotter -->
+         <section class="container">
+            <div class="pre-footer-container">
+            <div class="pre-footer-card">
+                <h1>700k</h1>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="pre-footer-card">
+                <h1>2.4m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="pre-footer-card">
+                <h1>100k</h1>
+                <p>Dribbble Shot Likes</p>
+            </div>
+        </div>
+         </section>
 
 
 
