Footer ready & Page is ready with mobile Responsive

--- a/index.html
+++ b/index.html
@@ -123,12 +123,19 @@
             </div>
         </div>
          </section>
-
-
+         
 
 
 
     </main>
 </body>
+<footer>
+    <div class="container footer">
+        <h3><span class="eat">Eat </span>Fresh</h3>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+
+    </div>
+
+</footer>
 
 </html>
