Footer section re edit and page ready

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </main>
 </body>
 <footer>
-    <div class="container footer">
+    <div class="footer">
         <h3><span class="eat">Eat </span>Fresh</h3>
         <p>Eat healthy to live healthy. Live healthy to live happy.</p>
 
